manifests/web-cluster/sdlc/helium/hotspot-data-sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotspot-data-sink
  name: hotspot-data-sink
  namespace: helium
spec:
  selector:
    matchLabels:
      app: hotspot-data-sink
  template:
    metadata:
      labels:
        app: hotspot-data-sink
        security-group: rds-access
    spec:
      serviceAccountName: rds-web-user-access
      containers:
        - name: hotspot-data-sink
          image: public.ecr.aws/v0j6k5v6/hotspot-data-sink:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: helius-auth-secret
              mountPath: /usr/src/app/keys
              readOnly: true
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 750Mi
      volumes:
        - name: helius-auth-secret
          secret:
            secretName: helius-auth-secret
            items:
              - key: helius-auth-secret.txt
                path: helius-auth-secret.txt
---
apiVersion: v1
kind: Service
metadata:
  name: hotspot-data-sink
  namespace: helium
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: hotspot-data-sink
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotspot-data-sink
  namespace: helium
spec:
  ingressClassName: nginx
  rules:
  - host: hotspot-data-sink.web.test-helium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotspot-data-sink
            port:
              number: 3000
